agregado archivo y modificado index

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,8 @@
     <title>GIT - GitHub</title>
 </head>
 <body>
-    
+    <h1>Jefferson</h1>
+    <p>Hola bienvenido a mi biografía, les indicaré algunas cosas de mi</p>
+    <img src="../image/pablo.png" alt ="El Pablo ;)">
 </body>
 </html>
